# usbip-service-discovery

./: .clang-format  .gitignore  README.md  config.h.meson  format_code.sh  meson.build  meson_options.txt  org.alunux.nekofi.pkexec.policy
data/: meson.build  nekofi-client.desktop  org.alunux.usbipapp.pkexec.policy  usbip-app-client.desktop  usbip-server.service
src/: meson.build
src/client/: broadcast_event.c  broadcast_event.h  device.c  device.h  discover.c  discover.h  main.c  meson.build  multicast_event.c  multicast_event.h  nekofi-client-pkexec.c  nekofi.c  nekofi.gresource.xml  nekofi.h  nekofiwin.c  nekofiwin.h  recv_data.c  usb_desc.c  usb_desc.h  usbip.h  usbip_app.c  usbip_app.gresource.xml  usbip_app.h  usbip_app_pkexec.c  usbip_app_win.c  usbip_app_win.h  usbip_attach.c  usbip_bind.c  usbip_detach.c  usbip_entry.ui  usbip_network.c  usbip_network.h  usbip_unbind.c  usbipd.c  window.ui
src/frontend/: device.c  device.h  main.c  meson.build  nekofi.c  nekofi.h  nekofiwin.c  nekofiwin.h  window.ui
src/libs/: detect_iface.c  detect_iface.h  list.h  meson.build  names.h  sysfs_utils.h  usbip_common.c  usbip_common.h  usbip_device_driver.c  usbip_device_driver.h  usbip_host_common.h  usbip_host_driver.h  vhci_driver.c  vhci_driver.h
src/server/: detect_iface.c  detect_iface.h  device.c  device.h  discovery_listener.c  listen.c  meson.build  monitor.c  send_data.c  usb_event_monitor.c  usb_metadata_server.c  usbip_bind.c  usbip_network.c  usbip_network.h  usbip_unbind.c  usbipd.c  utils.c  utils.h
src/utils/: meson.build  tes.c  usbip.h  usbip_attach.c  usbip_detach.c  usbip_list.c  usbip_network.c  usbip_port.c  usbipd.c  utils.c
